# logtwothirds

./: .gitignore  ALGORITHM.md  AUDIT.md  BENCHMARKS.md  BENCHMARKS_M3.md  CITATION.cff  Cargo.toml  FAILCASE.md  LICENSE  OPTIMIZATION.md  QUESTIONS.md  README.md  SPEC.md  VARIANTS.md  audit_nofilter.py  audit_stress.py  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml
benchmarks/: baseline.py  grid_kt.py  run.py  sweep_hybrid.py  sweep_lazypiv.py  variants_bench.py
benchmarks/results/: bench_fast_second_pass.txt  grid_fast_dimacs.json  grid_fast_random100000.json  grid_fast_random1000000.json  grid_tuned_dimacs.json  grid_tuned_random100000.json  grid_tuned_random1000000.json  results.json  results.md  results_dimacs.json  results_dimacs.md  results_final.json  results_final.md  results_final_1e7_a.json  results_final_1e7_b.json  results_final_1e7_c.json  results_final_1e7_d.json  results_final_small.json  results_m3.json  results_m3.md  results_probe1e5.json
docs/: 00-why-shortest-paths.md  01-dijkstra-from-scratch.md  02-the-sorting-barrier.md  03-how-bmssp-breaks-it.md  04-why-theory-isnt-speed.md
examples/: bench_fast.rs  profile_fast.rs  profile_phases.rs
python/logtwothirds/: __init__.py  _reference.py
src/: block_queue.rs  bmssp.rs  dijkstra.rs  lib.rs  multi.rs
src/variants/: engine.rs  fast.rs  hybrid_base.rs  lazy_pivots.rs  mod.rs  no_transform.rs  param_tuning.rs  simple_queue.rs
tests/: conftest.py  diff_driver.py  differential.rs  not_dijkstra.rs  property_vs_dijkstra.rs  reference.py  test_base_case.py  test_block_ds.py  test_bmssp.py  test_bmssp_method.py  test_compare_scipy.py  test_edge_cases.py  test_find_pivots.py  test_multi_source.py  test_properties.py  test_sssp.py  test_transform.py  test_verification.py  variants_correctness.rs
tests/audit/: audit_nofilter.py  audit_stress.py
tests/common/: mod.rs
