[package]
name = "logtwothirds"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
name = "_logtwothirds"
# rlib so `cargo test` / integration tests can link the pure-Rust core without
# a Python interpreter; cdylib for the maturin-built extension module.
crate-type = ["cdylib", "rlib"]

[features]
default = []
# The PyO3 bindings are gated so that plain `cargo test`/`cargo clippy` never
# need to link libpython. maturin builds with `--features python`.
python = ["dep:pyo3", "dep:numpy"]
# Wall-clock phase attribution inside BMSSP (find_pivots / base_case / block
# DS / transform). Zero overhead when off; results are unchanged when on.
# Used by `examples/profile_phases.rs` (mainline) and
# `examples/profile_fast.rs` (variants engine).
phase-timer = []
# Runtime invariant checks in the variants engine, compiled into release
# builds (the same checks are debug_assert!s otherwise). Zero overhead when
# off — release hot loops carry no instrumentation unless this is enabled.
verify = []

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }
numpy = { version = "0.23", optional = true }
# Deterministic fast hashing for the BMSSP bookkeeping maps/sets. Iteration
# order of these containers is never observed (membership/get/remove only),
# so swapping the hasher cannot change results — verified by the Step E
# differential test.
rustc-hash = "2"
# Global allocator. BMSSP's recursion makes tens of millions of small,
# short-lived Vec allocations per run; mimalloc is dramatically faster than
# the Windows system heap for that pattern. Allocator choice cannot affect
# results (Step E gate re-verified after the swap).
mimalloc = { version = "0.1", default-features = false }
# Parallel multi-source API: one independent single-source run per source,
# fanned out over a rayon thread pool.
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# The differential / property tests run BMSSP on graphs with up to 10^6 edges;
# unoptimized debug builds make that needlessly slow. Keep debug assertions on
# (they mirror the reference's `__debug__` checks) but optimize.
[profile.test]
opt-level = 2

[profile.dev]
opt-level = 2
